# trab-proj-softw-1-backend

./: .env.example  .gitignore  README.MD  README_MODELOS.MD  doc.md  pyproject.toml  readme.md  start_db.sql
core/: models.py  settings.py  settings_base.py  urls.py  views.py
core/templates/: base_public.html  home.html
locale/pt_BR/LC_MESSAGES/: django.po
map/: admin.py  apps.py  models.py  serializers.py
map/migrations/: 0001_initial.py  0002_alter_landmark_options_alter_pharmacy_options_and_more.py  0003_remove_pharmacy_landmark_pharmacy_latitude_and_more.py
medications/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
medications/management/commands/: import_farmacia_digital.py
medications/migrations/: 0001_initial.py  0002_alter_cid_options_alter_document_options_and_more.py  0003_remove_medication_components.py  0004_alter_medication_concentration_and_more.py  0005_medication_type.py
medications/templates/: import_medications.html
scrap/: farmacia_digital_estruturada.csv  farmadigitalscrap.py  medicamentos_estruturados.csv  remumescrap.py
static/core/css/: base_public.css  home.css
static/core/js/: home-theme-menu.js  theme-init.js
