[project]
name = "trab-proj-softw-1-backend"
version = "0.1.0"
description = ""
authors = [{name = "Ivan Mendes", email = "ivanmendes2005@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "Django==5.2",
    "djangorestframework>=3.17.1",
    "psycopg2-binary>=2.9.11",
    "pillow>=12.1.1",
    "django-environ>=0.13.0",
    "gunicorn>=25.2.0",
    "whitenoise>=6.12.0",
    "django-storages[s3]>=1.14.6",
    "boto3>=1.42.76",
    "django-unfold>=0.87.0",
    "pandas>=3.0.1",
    "requests>=2.33.1",
    "django-cors-headers>=4.9.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"